[gd_scene load_steps=14 format=2]

[ext_resource path="res://levels/login/login.gd" type="Script" id=1]
[ext_resource path="res://levels/commons/assets/fondmain.png" type="Texture" id=2]
[ext_resource path="res://levels/login/assets/backgdlogin.png" type="Texture" id=3]
[ext_resource path="res://levels/commons/fonts/montserrat/Montserrat-Regular.otf" type="DynamicFontData" id=4]
[ext_resource path="res://levels/commons/assets/logotmp.png" type="Texture" id=5]
[ext_resource path="res://levels/commons/themes/loginBackgd.tres" type="StyleBox" id=6]
[ext_resource path="res://levels/commons/themes/mainTitleTheme.tres" type="Theme" id=7]
[ext_resource path="res://levels/commons/themes/labelSkillFont.tres" type="Theme" id=8]
[ext_resource path="res://levels/commons/themes/multiModeButton.tres" type="Theme" id=9]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0509804, 0.0509804, 0.0509804, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id=3]
MarginContainer/styles/loginContainer = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 22
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 60

[node name="pageLogin" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="title" type="Label" parent="MarginContainer/pageLogin"]
visible = false
margin_top = 40.0
margin_right = 984.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 1 )
text = "Musicarena"
align = 1

[node name="MusicArena" type="TextureButton" parent="MarginContainer/pageLogin"]
margin_right = 984.0
size_flags_horizontal = 5
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="loginZone" type="MarginContainer" parent="MarginContainer/pageLogin"]
margin_top = 10.0
margin_right = 984.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 300
custom_constants/margin_top = 30
custom_constants/margin_left = 300
custom_constants/margin_bottom = 0

[node name="Panel" type="Panel" parent="MarginContainer/pageLogin/loginZone"]
margin_left = 492.0
margin_top = 30.0
margin_right = 492.0
margin_bottom = 510.0
size_flags_horizontal = 4
size_flags_vertical = 5
custom_styles/panel = SubResource( 2 )

[node name="loginContainer" type="MarginContainer" parent="MarginContainer/pageLogin/loginZone/Panel"]
margin_right = 384.0
margin_bottom = 391.0
theme = SubResource( 3 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/pageLogin/loginZone/Panel/loginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 364.0
margin_bottom = 386.0
custom_constants/separation = 17

[node name="login" type="Label" parent="MarginContainer/pageLogin/loginZone/Panel/loginContainer/VBoxContainer"]
margin_right = 344.0
margin_bottom = 56.0
theme = ExtResource( 7 )
text = "Login"
align = 1

[node name="username" type="Label" parent="MarginContainer/pageLogin/loginZone/Panel/loginContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 344.0
margin_bottom = 91.0
theme = ExtResource( 8 )
custom_colors/font_color = Color( 0.854902, 0.266667, 0.517647, 1 )
text = "username"
uppercase = true

[node name="usernameArea" type="LineEdit" parent="MarginContainer/pageLogin/loginZone/Panel/loginContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 344.0
margin_bottom = 132.0
placeholder_text = "write your username here..."

[node name="password" type="Label" parent="MarginContainer/pageLogin/loginZone/Panel/loginContainer/VBoxContainer"]
margin_top = 149.0
margin_right = 344.0
margin_bottom = 167.0
theme = ExtResource( 8 )
custom_colors/font_color = Color( 0.988235, 0.788235, 0.227451, 1 )
text = "password"
uppercase = true

[node name="passwordArea" type="LineEdit" parent="MarginContainer/pageLogin/loginZone/Panel/loginContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 344.0
margin_bottom = 208.0
secret = true
placeholder_text = "write your password here..."

[node name="loginButton" type="Button" parent="MarginContainer/pageLogin/loginZone/Panel/loginContainer/VBoxContainer"]
margin_left = 103.0
margin_top = 225.0
margin_right = 241.0
margin_bottom = 253.0
size_flags_horizontal = 4
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 4 )
text = "  CONNECT  "

[node name="errorArea" type="Label" parent="MarginContainer/pageLogin/loginZone/Panel/loginContainer/VBoxContainer"]
margin_top = 270.0
margin_right = 344.0
margin_bottom = 284.0
align = 1

[node name="forgottenpassword" type="Button" parent="MarginContainer/pageLogin/loginZone/Panel/loginContainer/VBoxContainer"]
margin_top = 301.0
margin_right = 344.0
margin_bottom = 325.0
theme = ExtResource( 8 )
text = "forgotten password?"
flat = true
align = 0

[node name="subscribe" type="Button" parent="MarginContainer/pageLogin/loginZone/Panel/loginContainer/VBoxContainer"]
margin_top = 342.0
margin_right = 344.0
margin_bottom = 366.0
theme = ExtResource( 8 )
text = "create account"
flat = true
align = 0

[node name="passwordforgot" type="Label" parent="MarginContainer/pageLogin/loginZone/Panel/loginContainer/VBoxContainer"]
visible = false
margin_top = 310.0
margin_right = 344.0
margin_bottom = 328.0
theme = ExtResource( 8 )
text = "forgotten password?"

[node name="suscribe" type="Label" parent="MarginContainer/pageLogin/loginZone/Panel/loginContainer/VBoxContainer"]
visible = false
margin_top = 347.0
margin_right = 344.0
margin_bottom = 365.0
theme = ExtResource( 8 )
text = "create an account"
